# trenako-web-api

./: .env  .gitignore  .releaserc  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.markdown  application.yml  docker-compose.yml  openapi.yaml  prepare-release.sh  recipe.json  rustfmt.toml  webapi.dockerfile
.docker/: dev.dockerfile
.docker/pgadmin/: pgpass  servers.json
.github/workflows/: audit.yml  build.yml  ci.yml  dev.yml  docker-v2.yml  docker.yml  main.yml  pull-request.yml
acceptance-tests/: .gitignore  build.gradle
acceptance-tests/src/main/java/com/trenako/: Application.java
acceptance-tests/src/main/resources/: application.yml
acceptance-tests/src/test/groovy/com/trenako/: FirstSpecification.groovy  HealthCheckSpecification.groovy
catalog/: Cargo.toml
catalog/src/: lib.rs  manufactures.rs
collecting/: Cargo.toml
config/: application.yml
db/: schema.sql
db/migrations/: 20210409180800_add_users_table.sql  20210409181044_add_catalog_tables.sql  20210409181300_add_collecting_tables.sql  20220320131942_add_catalog_tables.sql
openapi/: api-schema.yml  brands.yaml  catalog-items.yaml  collections.yaml  common.yaml  errors.yaml  railways.yaml  scales.yaml  shops.yaml  trenako-open-api.yaml  wishlists.yaml
social/: Cargo.toml
sources/: Cargo.toml
sources/webapi/tests/common/: mod.rs
webapi/: Cargo.toml
webapi/src/: configuration.rs  main.rs  server.rs  telemetry.rs
webapi/tests/: health_check.rs
workspace/catalog/: Cargo.toml
workspace/catalog/src/: lib.rs  railways.rs
workspace/catalog/src/brands/: data.rs  mod.rs  use_cases.rs
workspace/catalog/src/catalog_items/: categories.rs  controls.rs  delivery_date.rs  epoch.rs  item_number.rs  length.rs  mod.rs  rolling_stocks.rs  service_levels.rs
workspace/collecting/: Cargo.toml
workspace/common/: Cargo.toml
workspace/common/src/: address.rs  lib.rs  measure_units.rs  slug.rs  validation.rs
workspace/hateoas/: Cargo.toml
workspace/hateoas/src/: lib.rs  problem_detail.rs
workspace/social/: Cargo.toml
workspace/webapi/: Cargo.toml
workspace/webapi/src/: configuration.rs  lib.rs  main.rs  server.rs  telemetry.rs
workspace/webapi/src/db/: mod.rs
workspace/webapi/src/db/migrations/: V1__AddUsers.sql  V2__AddCatalogTables.sql  V3__AddCollectingTables.sql
workspace/webapi/src/handlers/: mod.rs
workspace/webapi/src/handlers/catalog/: brands.rs  catalog_items.rs  mod.rs  railways.rs  scales.rs
workspace/webapi/src/web/: mod.rs  pagination.rs  problem_detail.rs  problem_details.rs  urn.rs
workspace/webapi/tests/: health_check.rs
workspace/webapi/tests/common/: mod.rs
