[package]
name = "webapi"
version = "0.2.3"
authors = ["CarloMicieli <carlo.micieli@gmail.com>"]
edition = "2018"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "trenako-web-api"

[dependencies]
catalog = { path = "../catalog" }
collecting = { path = "../collecting" }

config = "0.11"
actix-web = "4.0.0-beta.6"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
serde_derive = "1.0.125"
tracing = "0.1.19"
tracing-futures = "0.2.4"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2"
tracing-log = "0.1.1"
tracing-actix-web = "0.3.0-beta.2"

[dependencies.sqlx]
version = "0.5.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "offline",
    "postgres",
    "uuid",
    "chrono"
]

[dev-dependencies]
reqwest = "0.11"
tokio = "1"
actix-rt = "2"
testcontainers = "0.12.0"
