[package]
name = "catalog"
version = "0.1.0"
edition = "2021"
authors = ["CarloMicieli <piovarolo@gmail.com>"]
license = "MIT"
rust-version = "1.59"

[dependencies]
common = { path = "../common" }

heck = "0.3.1"
anyhow = "1.0.56"
thiserror = "1.0.30"
itertools = "0.8.1"
url = "1.7.2"
derive_builder = "0.10.2"
validator = { version = "0.14", features = ["derive"] }
serde = { version = "1.0.115", features = ["derive"] }
async-trait = "0.1.52"

[dev-dependencies]
pretty_assertions = "1.1.0"