[package]
name = "common"
version = "0.1.0"
edition = "2021"
authors = ["CarloMicieli <piovarolo@gmail.com>"]
license = "MIT"
rust-version = "1.59"

[dependencies]
isocountry = "0.3.2"
slug = "0.1.4"
rust_decimal = "1.22.0"
rust_decimal_macros = "1.22.0"
serde = { version = "1.0.115", features = ["derive"] }
validator = { version = "0.14", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "1.1.0"
serde_json = "1.0.79"