[package]
name = "hateoas"
version = "0.1.0"
edition = "2021"
authors = ["CarloMicieli <piovarolo@gmail.com>"]
license = "MIT"
rust-version = "1.59"

[dependencies]
derive_builder = "0.10.2"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
serde = { version = "1.0.115", default-features = false }

[dev-dependencies]
pretty_assertions = "1.1.0"