[package]
name = "webapi"
version = "0.5.0"
authors = ["CarloMicieli <carlo.micieli@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "trenako-web-api"

[dependencies]
catalog = { path = "../catalog" }
collecting = { path = "../collecting" }
hateoas = { path = "../hateoas" }

actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.8", features = ["serde-float"] }
validator = { version = "0.14", features = ["derive"] }
derive_builder = "0.10"
config = "0.12"


[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "offline",
    "postgres",
    "uuid",
    "chrono"
]

