[package]
name = "webapi"
version = "0.5.0"
authors = ["CarloMicieli <carlo.micieli@gmail.com>"]
edition = "2021"
license = "MIT"
rust-version = "1.59"

[lib]
path = "src/lib.rs"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "trenako-web-api"

[dependencies]
catalog = { path = "../catalog" }
collecting = { path = "../collecting" }
hateoas = { path = "../hateoas" }

actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

serde = { version = "1.0.115", features = ["derive"] }
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1.8", features = ["serde-float"] }
validator = { version = "0.14", features = ["derive"] }
derive_builder = "0.10"
config = { version = "0.12", default-features = false, features = ["yaml"] }
tracing = "0.1.19"
tracing-actix-web = "0.5"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1.1"


[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "offline",
    "postgres",
    "uuid",
    "chrono"
]

